# autoclasswrapper

./: .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  Makefile  Pipfile  README.md  apt.txt  autoclasswrapper.py  environment-dev.yml  environment-readthedocs.yml  environment.yml  postBuild  readthedocs_requirements.txt  requirements.txt  setup.cfg  setup.py
autoclasswrapper/: __init__.py  __version__.py  input.py  output.py  run.py  tools.py  wrap_in.py  wrap_out.py
autoclasswrapper/tests/: test_input.py
demo/: demo.ipynb  demo_input.py  demo_output.py  demo_run.py
devtools/: RELEASE.md  bumpversion.cfg
doc/: Makefile  autoclasswrapper.md  conf.py  index.rst
doc/api/: input.rst
doc/notebooks/: demo.nblink  demo_iris.nblink  demo_toy.nblink
doc/source/: api_reference.rst  conf.py  demo.rst  index.rst  installation.rst
docs/: _config.yml  index.md
notebooks/: demo.ipynb  demo_iris.ipynb  demo_toy.ipynb
paper/: paper.bib  paper.md
tests/: test_input.py  test_output.py  test_run.py  test_tools.py
tests/test_data/: input-dup-col.tsv  sample-3-classes-real-location.case-data-1  sample-3-classes-real-location.db2  sample-3-classes-real-location.s-params  sample-3-classes-real-location.sh  sample-3-classes-real-location.tsv  sample-3-classes-real-location_out.cdt  sample-3-classes-real-location_out.tsv  sample-3-classes-real-location_out_stats.tsv  sample-3-classes-real-location_out_withprobs.cdt  sample-3-classes-real-location_stat.tsv  sample-3-classes-real-scalar.cdt  sample-discrete.tsv  (+8 more)
(+14 files in other folders)
