[metadata]
name = autoclasswrapper
version = attr: autoclasswrapper.__version__
author = Pierre Poulain
author_email = pierre.poulain@cupnet.net
url = https://github.com/pierrepo/autoclasswrapper
description = Simple Python wrapper for autoclass-c.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long_description_content_type = text/markdown
keywords = autoclass, clustering, proteins, genes
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
packages = find:
zip_safe = False
python_requires= >=3.4
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    chardet
include_package_data = True

[options.package_data]
* = LICENSE.txt, CHANGELOG.md
